# TPPTcoinc

./: CMakeLists.txt  README.md  coinc.cc
include/: Configuration.hh  DataStructures.hh  Enums.hh  Finder.hh  Finder1.hh  Finder2.hh  Finder3.hh  Lut.hh  Reader.hh  Writer.hh
src/: Configuration.cc  Finder.cc  Finder1.cc  Finder2.cc  Finder3.cc  Lut.cc  Reader.cc  Writer.cc  out.cc
